--- a/index.html
+++ b/index.html
@@ -4,15 +4,51 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>你好，世界</title>
+    <style>
+        div{
+            background: rgb(154, 255, 154);
+        }
+        p{
+            background: rgb(157, 239, 255);
+        }
+        #d3{
+            background: rgb(255, 99, 99);
+            margin: .125rem;
+            width: 6.25rem;
+            height: 6.25rem;
+        }
+        #d4{
+            background: rgb(255, 147, 165);
+            margin: .125rem;
+            width: 6.25rem;
+            height: 6.25rem;
+        }
+
+        /* 类选择器 */
+        .c1{
+            width: 12.5rem;
+            height: 12.5rem;
+        }
+    </style>
 </head>
 <body>
-    <h1>你好，世界</h1>
-    <h2>Hello, Word！</h2>
-    <p>我在练习Git操作</p>
-    <p>本来该找Gitee，结果忘了Gitee密码</p>
-    <p>也是一个抽象事情</p>
-    <p>如果你看到了我的消息</p>
-    <p>别忘了留个言</p>
-    <p>感谢你的耐心查看</p>
+     <div id="d1">1</div>
+
+     <p>2</p>
+
+     <div id="d3" class="c1">3</div>
+
+     <div id="d4" class="c1">4</div>
+
+
+
+     <h1>你好，世界</h1>
+     <h2>Hello, Word！</h2>
+     <p>我在练习Git操作</p>
+     <p>本来该找Gitee，结果忘了Gitee密码</p>
+     <p>也是一个抽象事情</p>
+     <p>如果你看到了我的消息</p>
+     <p>别忘了留个言</p>
+     <p>感谢你的耐心查看</p>
 </body>
 </html>
